--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
         <div class="question">5 + 2</div>
         <div class="ans-block">
-            <div class="ans">2</div>
+            <div class="ans no-margin">2</div>
             <div class="ans">5</div>
             <div class="ans">7</div>
-            <div class="ans">9</div>
+            <div class="ans no-margin">9</div>
             <div class="ans">11</div>
         </div>
     </div>
